Exemplo de medidas de assimetria e curtose

--- a/estatistica/Estatistica_descritiva.ipynb
+++ b/estatistica/Estatistica_descritiva.ipynb
@@ -42,7 +42,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GyL8-gjPlfYz",
-        "outputId": "5299d00c-d09a-4742-8dc6-20e8de3c500d"
+        "outputId": "299e7f3b-0a03-41ee-a82c-4da630206b1e"
       },
       "source": [
         "import pandas as pd\r\n",
@@ -50,13 +50,13 @@
         "import seaborn as sns \r\n",
         "import matplotlib.pyplot as plt\r\n",
         "\r\n",
-        "train_df = pd.read_csv('train.csv')\r\n",
+        "train_df = pd.read_csv('/train.csv')\r\n",
         "example_series =  pd.Series([1,5,10,30,50,30,15,40,45])\r\n",
         "\r\n",
         "print(example_series.mean())\r\n",
         "25.11111111111111"
       ],
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -75,7 +75,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 2
         }
       ]
     },
@@ -149,7 +149,7 @@
       "source": [
         "sns.boxplot(data=example_series)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,7 +200,7 @@
       "source": [
         "print(example_series.mode())"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,7 +234,7 @@
         "example_series_2 =  pd.Series([1,5,10,30,50,30,15,40,45,45])\r\n",
         "print(example_series_2.mode())"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +272,7 @@
       "source": [
         "print(example_series.max() - example_series.min())"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +305,7 @@
       "source": [
         "print(example_series.var())"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,7 +338,7 @@
       "source": [
         "print(example_series.std())"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +373,7 @@
       "source": [
         "print(example_series.mad())"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,7 +412,7 @@
         "plt.matshow(train_df.cov(), fignum=f.number)\r\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -453,7 +453,7 @@
         "corr = train_df.corr().round(2)\r\n",
         "sns.heatmap(data=corr, annot=True)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,11 +491,117 @@
         "### Entretanto, é necessário cuidado ao avaliar as correlações. Alguns dados podem indicar uma correlação que não existe de fato, e é apenas obra do acaso, o que é possível em certos casos onde variáveis apresentam algum tipo de padrão que pode levar a este valor de correlação.\r\n",
         "\r\n",
         "### Por fim, também é importante atentar para o famoso conceito que diz que “correlação não implica causalidade”. O que isso quer dizer é, quando duas variáveis apresentam um alto valor de correlação, pode ser que a primeira variável cause este comportamento na segunda, que a segunda causa este comportamento na primeira, que ambas causam o comportamento na outra ou isso também pode não dizer nada, como nos casos que mencionamos acima. O segredo para não cair nesta armadilha é conhecer bem os dados, para que se possa fazer sempre uma avaliação criteriosa, caso a caso.\r\n",
-        "\r\n",
-        "### Bem, para uma introdução de Estatística Descritiva, acredito que seja um bom começo :)\r\n",
-        "\r\n",
-        "## Abraços!\r\n",
         "\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3KaDnB1l4GB6"
+      },
+      "source": [
+        " # Assimetria (skewness): \r\n",
+        " ### mede o grau de simetria da curva, em relação a distribuição normal."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JBIDjzLT4J_x",
+        "outputId": "203129ae-72c0-4f30-f17b-b4109e13773f"
+      },
+      "source": [
+        "train_df.skew()"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PassengerId    0.000000\n",
+              "Survived       0.478523\n",
+              "Pclass        -0.630548\n",
+              "Age            0.389108\n",
+              "SibSp          3.695352\n",
+              "Parch          2.749117\n",
+              "Fare           4.787317\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r5jPo_xE4UZ5"
+      },
+      "source": [
+        "### Para dados normalmente distribuídos, a assimetria é bem próxima de zero.\r\n",
+        "### Uma assimetria positiva, com valor > 0, significa que a cauda da distribuição está mais para a direita. Ou seja, que os valores de moda < mediana < média.\r\n",
+        "### Uma assimetria negativa, com valor < 0, significa que a cauda da distribuição está mais para a esquerda. Ou seja, que os valores de média < mediana < moda."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PX7FhqZm4ZrE"
+      },
+      "source": [
+        "# Curtose (kurtosis): \r\n",
+        "### mede o grau de achatamento da curva, em relação a curva normal. Em python:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XcaBaExh4bv5",
+        "outputId": "f7db0c08-68fd-4685-860a-d88d0260ca1c"
+      },
+      "source": [
+        "train_df.kurtosis()"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PassengerId    -1.200000\n",
+              "Survived       -1.775005\n",
+              "Pclass         -1.280015\n",
+              "Age             0.178274\n",
+              "SibSp          17.880420\n",
+              "Parch           9.778125\n",
+              "Fare           33.398141\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bZgn5C1Z4lrt"
+      },
+      "source": [
+        "### Se o valor encontrado é igual 0, você tem uma distribuição mesocúrtica; se maior que 0, leptocúrtica, correspondendo a uma curva mais pontuda; se menor que 0, platicúrtica, ou seja, uma curva mais achatada, com maior variabilidade dos dados."
       ]
     }
   ]
